Minor fix preventing line wrap in parent component viewer

--- a/to.etc.domui/src/resources/themes/blue/style.theme.css
+++ b/to.etc.domui/src/resources/themes/blue/style.theme.css
@@ -1411,4 +1411,5 @@ body,html {
 	border-bottom: 1px dotted #444444;
 	cursor: crosshair;
 	color: white;
+	white-space: nowrap;
 }
